# NoteManager

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: notes.db
include/: Database.h  Notes.h
src/: Database.cpp  Notes.cpp  main.cpp
